examples/test/testpolicy10122.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10122
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key4: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value22
          key32: value31
      podSelector:
        matchLabels:
          key8: value21
          key29: value28
